--- a/backend/.env
+++ b/backend/.env
@@ -4,6 +4,6 @@ MONGO_URI=mongodb+srv://gundaya2220958:Chichichichichi0820@cluster0.q2mff.mongod
 AUTH_EMAIL=pawprojectsystem@gmail.com
 AUTH_PASSWORD=rnam zehw oivs hqrn
 
-CLOUDINARY_CLOUD_NAME=Paw Project
+CLOUDINARY_CLOUD_NAME=pawproject
 CLOUDINARY_API_KEY=656842148123659
 CLOUDINARY_API_SECRET=nlJAJiEcnC6tAPhiFrkzrLjugFg
