--- a/frontend/package.json
+++ b/frontend/package.json
@@ -61,12 +61,12 @@
     "input-otp": "^1.2.4",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.446.0",
-    "next": "^15.3.1",
+    "next": "^15.5.0",
     "next-themes": "^0.3.0",
     "postcss": "8.4.30",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-day-picker": "^8.10.1",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
