--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.19.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.10.0",
     "uuid": "^11.1.0"
