--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "mongodb": "^6.19.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.10.0",
+    "socket.io": "^4.8.1",
     "uuid": "^11.1.0"
   }
 }
