--- a/frontend/package.json
+++ b/frontend/package.json
@@ -76,6 +76,7 @@
     "react-resizable-panels": "^2.1.3",
     "react-toastify": "^11.0.5",
     "recharts": "^2.12.7",
+    "socket.io-client": "^4.8.1",
     "sonner": "^1.5.0",
     "styled-components": "^6.1.15",
     "tailwind-merge": "^2.5.2",
@@ -84,7 +85,7 @@
     "typescript": "5.2.2",
     "uuid": "^11.1.0",
     "vaul": "^0.9.9",
-    "ws": "^8.18.3",
+    "ws": "^8.17.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
