--- a/frontend/package.json
+++ b/frontend/package.json
@@ -65,6 +65,7 @@
     "input-otp": "^1.2.4",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.446.0",
+    "mongoose": "^8.19.1",
     "next": "^15.5.0",
     "next-themes": "^0.3.0",
     "postcss": "8.4.30",
