--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "mongoose": "^8.0.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.10.0",
+    "resend": "^6.1.2",
     "socket.io": "^4.8.1",
     "uuid": "^11.1.0"
   }
