--- a/backend/.env
+++ b/backend/.env
@@ -4,6 +4,8 @@ MONGO_URI=mongodb+srv://gundaya2220958:Chichichichichi0820@cluster0.q2mff.mongod
 AUTH_EMAIL=pawprojectsystem@gmail.com
 AUTH_PASSWORD=jzpf bywd bdjt nzca
 
+RESEND_API_KEY=re_FQiH6iFd_PemUs3uhaEhfveCJApzPhUbW
+
 CLOUDINARY_CLOUD_NAME=dmz02b9lx
 CLOUDINARY_API_KEY=616974915165527
 CLOUDINARY_API_SECRET=HA9FLEvqy9W-cxmSQRU5691GeoE
