--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "mongodb": "^6.19.0",
     "mongoose": "^8.0.0",
     "multer": "^1.4.5-lts.1",
+    "node-cron": "^4.2.1",
     "nodemailer": "^6.10.0",
     "resend": "^6.1.2",
     "socket.io": "^4.8.1",
