--- a/frontend/package.json
+++ b/frontend/package.json
@@ -68,6 +68,7 @@
     "mongoose": "^8.19.1",
     "next": "^15.5.0",
     "next-themes": "^0.3.0",
+    "node-cron": "^4.2.1",
     "postcss": "8.4.30",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.3.0",
