--- a/frontend/package.json
+++ b/frontend/package.json
@@ -47,6 +47,7 @@
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
     "@shadcn/ui": "^0.0.4",
+    "@supabase/supabase-js": "^2.76.1",
     "@types/node": "20.6.2",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
@@ -64,7 +65,7 @@
     "framer-motion": "^11.0.8",
     "input-otp": "^1.2.4",
     "lottie-react": "^2.4.1",
-    "lucide-react": "^0.446.0",
+    "lucide-react": "^0.546.0",
     "mongoose": "^8.19.1",
     "next": "^15.5.0",
     "next-themes": "^0.3.0",
